--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</table>
 		</div>
 
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
