Assignment is done

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1 class="center">Simple Assembler</h1>
-			<table>
+			<h1 class="page-header">Simple Assembler</h1>
+			<table class="table">
 				<thead>
 					<th>Assembly Language Code</th>
 					<th>Machine Language Code</th>
@@ -21,7 +21,7 @@
 						<td><textarea id="machine"></textarea></td>
 					</tr>
 					<tr colspan="2">
-						<td><button id="assemble">Assemble</button></td>
+						<td><button class="btn btn-default" id="assemble">Assemble</button></td>
 					</tr>
 				</tbody>
 			</table>
