--- a/index.html
+++ b/index.html
@@ -10,21 +10,16 @@
 	<body>
 		<div class="container">
 			<h1 class="page-header">Simple Assembler</h1>
-			<table class="table">
-				<thead>
-					<th>Assembly Language Code</th>
-					<th>Machine Language Code</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td><textarea id="assembly"></textarea></td>
-						<td><textarea id="machine"></textarea></td>
-					</tr>
-					<tr colspan="2">
-						<td><button class="btn btn-default" id="assemble">Assemble</button></td>
-					</tr>
-				</tbody>
-			</table>
+			<div class="half-width">
+				<div class="input-field">
+					<label for="assembly">Assembly Language Code</label>
+					<textarea id="assembly"></textarea>
+				</div>
+				<div class="input-field">
+					<label for="machine">Machine Language Code</label>
+					<textarea id="machine"></textarea>
+				</div>
+			</div>
 		</div>
 
 		<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
