Fixed layout and improved design

--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 	<body>
 		<div class="container">
 			<h1 class="page-header">Simple Assembler</h1>
-			<div class="half-width">
-				<div class="input-field">
-					<label for="assembly">Assembly Language Code</label>
-					<textarea id="assembly"></textarea>
+			<div class="row">
+				<div class="half-width">
+					<div class="input-field">
+						<label for="assembly">Assembly Language Code</label>
+						<textarea id="assembly"></textarea>
+					</div>
 				</div>
-				<div class="input-field">
-					<label for="machine">Machine Language Code</label>
-					<textarea id="machine"></textarea>
+				<div class="half-width">
+					<div class="input-field">
+						<label for="machine">Machine Language Code</label>
+						<textarea id="machine"></textarea>
+					</div>
 				</div>
 			</div>
+			<button id="assemble">Assemble</button>
 		</div>
 
 		<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
