--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ HALT</textarea>
 					<textarea id="machine"></textarea>
 				</div>
 			</div>
-			<button id="assemble">Assemble</button>
+			<button onclick="assemble()">Assemble</button>
 		</div>
 
 		<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
