Disabled machine code textarea

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ HALT</textarea>
 				</div>
 				<div class="half-width">
 					<label for="machine">Machine Language Code</label>
-					<textarea id="machine"></textarea>
+					<textarea id="machine" disabled="disabled"></textarea>
 				</div>
 			</div>
 			<button onclick="assemble()">Assemble</button>
